deploy/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: dev.kube-gitops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app       # Match your 'kubectl get svc'
            port:
              number: 8000     # Match your 'kubectl get svc'
